--- a/style/base.css
+++ b/style/base.css
@@ -1,3 +1,6 @@
-body{
-  background-color: var(--red-light);
+@media only screen and (min-width: 1024px) {
+  body{
+    background-color: var(--red-light);
+  }
 }
+
