--- a/style/img.css
+++ b/style/img.css
@@ -7,7 +7,13 @@
   height: 100%;
   width: auto;
   object-fit: contain; }
-
+  
 .product-img {
-  max-height: 30.875rem;
+  max-height: 100px;
+}
+
+@media only screen and (min-width: 1024px) {
+  .product-img {
+    max-height: 30.875rem;
+  }
 }
