Code cleanup & css rearrangement

--- a/style/index.css
+++ b/style/index.css
@@ -1,12 +1,17 @@
-@import "font.css";
-@import "colors.css";
-@import "base.css";
-@import "banner.css";
+/* Layout */
+@import "layout/font.css";
+@import "layout/colors.css";
+@import "layout/base.css";
+@import "layout/container.css";
 @import "header.css";
-@import "container.css";
 @import "footer.css";
+
+/* Atom */
 @import "img.css";
-@import "hero.css";
 @import "text-image.css";
 @import "label.css";
 @import "radio.css";
+
+/* molecules */
+@import "banner.css";
+@import "hero.css";
